<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.basicandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.basicandroid.ui.profilep.ProfilepFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />

    <fragment
        android:id="@+id/nav_profilep"
        android:name="com.example.basicandroid.ui.aboutus.SlideshowFragment"
        android:label="@string/menu_profilep"
        tools:layout="@layout/fragment_profilep" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.basicandroid.ui.email.EmailFragment"
        android:label="@string/menu_email"
        tools:layout="@layout/fragment_email" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.basicandroid.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.basicandroid.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>